; ModuleID = '/home/carl/AnghaBench/linux/sound/pci/ice1712/extr_ice1724.c_vt1724_midi_output_drain.c'
source_filename = "/home/carl/AnghaBench/linux/sound/pci/ice1712/extr_ice1724.c_vt1724_midi_output_drain.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snd_rawmidi_substream = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { %struct.snd_ice1712* }
%struct.snd_ice1712 = type { i32 }

@VT1724_IRQ_MPU_TX = common dso_local global i32 0, align 4
@jiffies = common dso_local global i64 0, align 8
@MPU_CTRL = common dso_local global i32 0, align 4
@VT1724_MPU_TX_EMPTY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.snd_rawmidi_substream*)* @vt1724_midi_output_drain to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @vt1724_midi_output_drain(%struct.snd_rawmidi_substream* %0) #0 {
  %2 = alloca %struct.snd_rawmidi_substream*, align 8
  %3 = alloca %struct.snd_ice1712*, align 8
  %4 = alloca i64, align 8
  store %struct.snd_rawmidi_substream* %0, %struct.snd_rawmidi_substream** %2, align 8
  %5 = load %struct.snd_rawmidi_substream*, %struct.snd_rawmidi_substream** %2, align 8
  %6 = getelementptr inbounds %struct.snd_rawmidi_substream, %struct.snd_rawmidi_substream* %5, i32 0, i32 0
  %7 = load %struct.TYPE_2__*, %struct.TYPE_2__** %6, align 8
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 0
  %9 = load %struct.snd_ice1712*, %struct.snd_ice1712** %8, align 8
  store %struct.snd_ice1712* %9, %struct.snd_ice1712** %3, align 8
  %10 = load %struct.snd_rawmidi_substream*, %struct.snd_rawmidi_substream** %2, align 8
  %11 = load i32, i32* @VT1724_IRQ_MPU_TX, align 4
  %12 = call i32 @vt1724_enable_midi_irq(%struct.snd_rawmidi_substream* %10, i32 %11, i32 0)
  %13 = load i64, i64* @jiffies, align 8
  %14 = call i64 @msecs_to_jiffies(i32 15)
  %15 = add i64 %13, %14
  store i64 %15, i64* %4, align 8
  br label %16

16:                                               ; preds = %27, %1
  %17 = load %struct.snd_ice1712*, %struct.snd_ice1712** %3, align 8
  %18 = load i32, i32* @MPU_CTRL, align 4
  %19 = call i32 @ICEREG1724(%struct.snd_ice1712* %17, i32 %18)
  %20 = call i32 @inb(i32 %19)
  %21 = load i32, i32* @VT1724_MPU_TX_EMPTY, align 4
  %22 = and i32 %20, %21
  %23 = icmp ne i32 %22, 0
  br i1 %23, label %24, label %25

24:                                               ; preds = %16
  br label %32

25:                                               ; preds = %16
  %26 = call i32 @schedule_timeout_uninterruptible(i32 1)
  br label %27

27:                                               ; preds = %25
  %28 = load i64, i64* %4, align 8
  %29 = load i64, i64* @jiffies, align 8
  %30 = call i64 @time_after(i64 %28, i64 %29)
  %31 = icmp ne i64 %30, 0
  br i1 %31, label %16, label %32

32:                                               ; preds = %27, %24
  ret void
}

declare dso_local i32 @vt1724_enable_midi_irq(%struct.snd_rawmidi_substream*, i32, i32) #1

declare dso_local i64 @msecs_to_jiffies(i32) #1

declare dso_local i32 @inb(i32) #1

declare dso_local i32 @ICEREG1724(%struct.snd_ice1712*, i32) #1

declare dso_local i32 @schedule_timeout_uninterruptible(i32) #1

declare dso_local i64 @time_after(i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
